Added pickaxe heater, move glove textures